--- a/src/app/business/pages/dashboard/dashboard.component.html
+++ b/src/app/business/pages/dashboard/dashboard.component.html
@@ -6,42 +6,208 @@
 
     <div class="col-12 xl:col-6">
         <div class="card">
-            <h5>Inscripciones</h5>
+            <div class="flex align-items-center justify-content-between mb-2">
+                <h5>Reporte de Inscripciones</h5>
+                <div *ngIf="statusChartInscription === 'complete'">
+                    <p-dropdown
+                        [options]="years"
+                        [(ngModel)]="yearSelectedByInscription"
+                        optionLabel="name"
+                        placeholder="Selecciona un año"
+                    />
+                    <p-button
+                        icon="pi pi-search"
+                        [rounded]="true"
+                        [text]="true"
+                        (click)="fillChartInscription()"
+                    />
+                </div>
+                <div
+                    *ngIf="statusChartInscription === 'charging'"
+                    style="width: 25%"
+                >
+                    <p-skeleton height="2rem" styleClass="" />
+                </div>
+            </div>
             <p-chart
+                *ngIf="statusChartInscription !== 'error'"
                 type="line"
-                [data]="chartData"
+                [data]="chartDataInscription"
                 [options]="chartOptions"
             ></p-chart>
+            <app-card-error
+                *ngIf="statusChartInscription === 'error'"
+                message="Se ha producido un error al cargar la información, por favor intentelo más tarde."
+                (reload)="fillChartInscription()"
+            >
+            </app-card-error>
         </div>
         <div class="card">
-            <h5>Inscripciones</h5>
+            <div class="flex align-items-center justify-content-between mb-2">
+                <h5>Reporte de Revisiones de tesis</h5>
+                <div *ngIf="statusChartReview === 'complete'">
+                    <p-dropdown
+                        [options]="years"
+                        [(ngModel)]="yearSelectedByReview"
+                        optionLabel="name"
+                        placeholder="Selecciona un año"
+                    />
+                    <p-button
+                        icon="pi pi-search"
+                        [rounded]="true"
+                        [text]="true"
+                        (click)="fillChartReview()"
+                    />
+                </div>
+                <div
+                    *ngIf="statusChartReview === 'charging'"
+                    style="width: 25%"
+                >
+                    <p-skeleton height="2rem" styleClass="" />
+                </div>
+            </div>
             <p-chart
+                *ngIf="statusChartReview !== 'error'"
                 type="line"
-                [data]="chartData"
+                [data]="chartDataReview"
                 [options]="chartOptions"
             ></p-chart>
+            <app-card-error
+                *ngIf="statusChartReview === 'error'"
+                message="Se ha producido un error al cargar la información, por favor intentelo más tarde."
+                (reload)="fillChartReview()"
+            >
+            </app-card-error>
+        </div>
+        <div class="card">
+            <div class="flex align-items-center justify-content-between mb-2">
+                <h5>Reporte de Articulos</h5>
+                <div *ngIf="statusChartArticles === 'complete'">
+                    <p-dropdown
+                        [options]="years"
+                        [(ngModel)]="yearSelectedByArticles"
+                        optionLabel="name"
+                        placeholder="Selecciona un año"
+                    />
+                    <p-button
+                        icon="pi pi-search"
+                        [rounded]="true"
+                        [text]="true"
+                        (click)="callGetReportByArticles()"
+                    />
+                </div>
+                <div
+                    *ngIf="statusChartArticles === 'charging'"
+                    style="width: 25%"
+                >
+                    <p-skeleton height="2rem" styleClass="" />
+                </div>
+            </div>
+            <div
+                *ngIf="statusChartReview !== 'error'"
+                class="w-full flex align-items-center justify-content-center"
+            >
+                <div style="width: 70%">
+                    <p-chart
+                        type="pie"
+                        [data]="dataArticles"
+                        [options]="optionsArticles"
+                    />
+                </div>
+            </div>
+
+            <app-card-error
+                *ngIf="statusChartReview === 'error'"
+                message="Se ha producido un error al cargar la información, por favor intentelo más tarde."
+                (reload)="callGetReportByArticles()"
+            >
+            </app-card-error>
+            <app-card-error
+                *ngIf="statusChartReview === 'error'"
+                message="Se ha producido un error al cargar la información, por favor intentelo más tarde."
+                (reload)="fillChartReview()"
+            >
+            </app-card-error>
         </div>
         <app-similarity-titles></app-similarity-titles>
     </div>
 
     <div class="col-12 xl:col-6">
         <div class="card">
-            <h5>Inscripciones</h5>
+            <div class="flex align-items-center justify-content-between mb-2">
+                <h5>Reporte de Asesorías</h5>
+                <div *ngIf="statusChartAdvisory === 'complete'">
+                    <p-dropdown
+                        [options]="years"
+                        [(ngModel)]="yearSelectedByAdvisory"
+                        optionLabel="name"
+                        placeholder="Selecciona un año"
+                    />
+                    <p-button
+                        icon="pi pi-search"
+                        [rounded]="true"
+                        [text]="true"
+                        (click)="fillChartAdvisory()"
+                    />
+                </div>
+                <div
+                    *ngIf="statusChartAdvisory === 'charging'"
+                    style="width: 25%"
+                >
+                    <p-skeleton height="2rem" styleClass="" />
+                </div>
+            </div>
             <p-chart
+                *ngIf="statusChartAdvisory !== 'error'"
                 type="line"
-                [data]="chartData"
+                [data]="chartDataAdvisory"
                 [options]="chartOptions"
             ></p-chart>
+            <app-card-error
+                *ngIf="statusChartAdvisory === 'error'"
+                message="Se ha producido un error al cargar la información, por favor intentelo más tarde."
+                (reload)="fillChartAdvisory()"
+            >
+            </app-card-error>
         </div>
         <div class="card">
-            <h5>Asesorias</h5>
+            <div class="flex align-items-center justify-content-between mb-2">
+                <h5>Reporte de Sustentaciones</h5>
+                <div *ngIf="statusChartPresentation === 'complete'">
+                    <p-dropdown
+                        [options]="years"
+                        [(ngModel)]="yearSelectedByPresentation"
+                        optionLabel="name"
+                        placeholder="Selecciona un año"
+                    />
+                    <p-button
+                        icon="pi pi-search"
+                        [rounded]="true"
+                        [text]="true"
+                        (click)="fillChartPresentation()"
+                    />
+                </div>
+                <div
+                    *ngIf="statusChartPresentation === 'charging'"
+                    style="width: 25%"
+                >
+                    <p-skeleton height="2rem" styleClass="" />
+                </div>
+            </div>
             <p-chart
+                *ngIf="statusChartPresentation !== 'error'"
                 type="line"
-                [data]="chartData"
+                [data]="chartDataPresentation"
                 [options]="chartOptions"
             ></p-chart>
+            <app-card-error
+                *ngIf="statusChartPresentation === 'error'"
+                message="Se ha producido un error al cargar la información, por favor intentelo más tarde."
+                (reload)="fillChartPresentation()"
+            >
+            </app-card-error>
         </div>
-        <div class="card" style="max-height: 500px;">
+        <div class="card" style="max-height: 500px">
             <div class="flex align-items-center justify-content-between mb-2">
                 <h5>Notificaciones</h5>
                 <div>
@@ -77,79 +243,15 @@
             </div>
 
             <ng-template #notificacionList>
-
                 <p-scrollPanel [style]="{ width: '100%', height: '350px' }">
                     <span
-                    *ngIf="notificationsToday.length > 0"
-                    class="block text-600 font-medium mb-3"
-                    >Hoy</span
-                >
-                <ul class="p-0 mx-0 mt-0 mb-4 list-none">
-                    <li
-                        *ngFor="let notification of notificationsToday"
-                        class="flex align-items-center py-2 border-bottom-1 surface-border"
-                    >
-                        <div
-                            class="w-3rem h-3rem flex align-items-center justify-content-center bg-blue-100 border-circle mr-3 flex-shrink-0"
-                        >
-                            <i
-                                [class]="
-                                    notification.icon + ' text-xl text-blue-500'
-                                "
-                            ></i>
-                        </div>
-                        <span class="text-900 line-height-3">
-                            {{
-                                notification.type === "comment"
-                                    ? notification.comment
-                                    : notification.type === "task"
-                                    ? notification.task
-                                    : notification.status
-                            }}
-                        </span>
-                    </li>
-                </ul>
-
-                <span
-                    *ngIf="notificationsYesterday.length > 0"
-                    class="block text-600 font-medium mb-3"
-                    >Ayer</span
-                >
-                <ul class="p-0 mx-0 mt-0 mb-4 list-none">
-                    <li
-                        *ngFor="let notification of notificationsYesterday"
-                        class="flex align-items-center py-2 border-bottom-1 surface-border"
-                    >
-                        <div
-                            class="w-3rem h-3rem flex align-items-center justify-content-center bg-blue-100 border-circle mr-3 flex-shrink-0"
-                        >
-                            <i
-                                [class]="
-                                    notification.icon + ' text-xl text-blue-500'
-                                "
-                            ></i>
-                        </div>
-                        <span class="text-900 line-height-3">
-                            {{
-                                notification.type === "comment"
-                                    ? notification.comment
-                                    : notification.type === "task"
-                                    ? notification.task
-                                    : notification.status
-                            }}
-                        </span>
-                    </li>
-                </ul>
-
-                <ng-container
-                    *ngFor="let daysAgo of notificationsDaysAgo | keyvalue"
-                >
-                    <span class="block text-600 font-medium mb-3"
-                        >Hace {{ daysAgo.key }} días</span
+                        *ngIf="notificationsToday.length > 0"
+                        class="block text-600 font-medium mb-3"
+                        >Hoy</span
                     >
                     <ul class="p-0 mx-0 mt-0 mb-4 list-none">
                         <li
-                            *ngFor="let notification of daysAgo.value"
+                            *ngFor="let notification of notificationsToday"
                             class="flex align-items-center py-2 border-bottom-1 surface-border"
                         >
                             <div
@@ -173,13 +275,73 @@
                             </span>
                         </li>
                     </ul>
-                </ng-container>
 
+                    <span
+                        *ngIf="notificationsYesterday.length > 0"
+                        class="block text-600 font-medium mb-3"
+                        >Ayer</span
+                    >
+                    <ul class="p-0 mx-0 mt-0 mb-4 list-none">
+                        <li
+                            *ngFor="let notification of notificationsYesterday"
+                            class="flex align-items-center py-2 border-bottom-1 surface-border"
+                        >
+                            <div
+                                class="w-3rem h-3rem flex align-items-center justify-content-center bg-blue-100 border-circle mr-3 flex-shrink-0"
+                            >
+                                <i
+                                    [class]="
+                                        notification.icon +
+                                        ' text-xl text-blue-500'
+                                    "
+                                ></i>
+                            </div>
+                            <span class="text-900 line-height-3">
+                                {{
+                                    notification.type === "comment"
+                                        ? notification.comment
+                                        : notification.type === "task"
+                                        ? notification.task
+                                        : notification.status
+                                }}
+                            </span>
+                        </li>
+                    </ul>
+
+                    <ng-container
+                        *ngFor="let daysAgo of notificationsDaysAgo | keyvalue"
+                    >
+                        <span class="block text-600 font-medium mb-3"
+                            >Hace {{ daysAgo.key }} días</span
+                        >
+                        <ul class="p-0 mx-0 mt-0 mb-4 list-none">
+                            <li
+                                *ngFor="let notification of daysAgo.value"
+                                class="flex align-items-center py-2 border-bottom-1 surface-border"
+                            >
+                                <div
+                                    class="w-3rem h-3rem flex align-items-center justify-content-center bg-blue-100 border-circle mr-3 flex-shrink-0"
+                                >
+                                    <i
+                                        [class]="
+                                            notification.icon +
+                                            ' text-xl text-blue-500'
+                                        "
+                                    ></i>
+                                </div>
+                                <span class="text-900 line-height-3">
+                                    {{
+                                        notification.type === "comment"
+                                            ? notification.comment
+                                            : notification.type === "task"
+                                            ? notification.task
+                                            : notification.status
+                                    }}
+                                </span>
+                            </li>
+                        </ul>
+                    </ng-container>
                 </p-scrollPanel>
-
-
-
-                
             </ng-template>
             <ng-template #notificacionError>
                 <app-label-error
