--- a/src/app/business/cross-components/task-list/task-list.component.html
+++ b/src/app/business/cross-components/task-list/task-list.component.html
@@ -119,10 +119,10 @@
                     >
                         <p-checkbox
                             [inputId]="task.id"
-                            [(ngModel)]="task.checked"
+                            [(ngModel)]="task.status"
                             [binary]="true"
                             #checkbox
-                            [disabled]="_chbDisable"
+                            [disabled]="task.status || _chbDisable"
                             (onChange)="taskDone(task.id, checkbox)"
                         ></p-checkbox>
                         <label
@@ -138,7 +138,7 @@
                             [rounded]="true"
                             [text]="true"
                             severity="danger"
-                            [disabled]="task.checked || _chbDisable"
+                            [disabled]="task.status || _chbDisable"
                             (click)="removeTask(task.id)"
                         />
                     </div>
