se completó el desarrollo del módulo de Planes

--- a/src/app/business/pages/plans-register/plans-register.component.html
+++ b/src/app/business/pages/plans-register/plans-register.component.html
@@ -217,8 +217,16 @@
                     </div>
                 </form>
             </div>
-            <div class="col-12 mt-6">
-                <h3>Vista previa del plan</h3>
+            <div *ngIf="!floatingBoard" class="col-12 mt-6">
+                <div class="flex w-full">
+                    <label style="font-size: 1.2rem;" class="mr-auto">Vista previa del plan</label>
+                    <p-button
+                        label="Ver en ventana flotante"
+                        [text]="true"
+                        (click)="floatingBoard = true"
+                        icon="pi pi-external-link"
+                    />
+                </div>
                 <p-table
                     [value]="previewData"
                     styleClass="p-datatable-gridlines"
@@ -267,18 +275,18 @@
 
                             <td>{{ data.taskCode }}</td>
                             <td>{{ data.tarea }}</td>
-                            <td [innerHTML]="data.months[0]"></td>
-                            <td [innerHTML]="data.months[1]"></td>
-                            <td [innerHTML]="data.months[2]"></td>
-                            <td [innerHTML]="data.months[3]"></td>
-                            <td [innerHTML]="data.months[4]"></td>
-                            <td [innerHTML]="data.months[5]"></td>
-                            <td [innerHTML]="data.months[6]"></td>
-                            <td [innerHTML]="data.months[7]"></td>
-                            <td [innerHTML]="data.months[8]"></td>
-                            <td [innerHTML]="data.months[9]"></td>
-                            <td [innerHTML]="data.months[10]"></td>
-                            <td [innerHTML]="data.months[11]"></td>
+                            <td [ngClass]="{'td-check' : data.months[0]}" [innerHTML]="data.months[0]"></td>
+                            <td [ngClass]="{'td-check' : data.months[1]}" [innerHTML]="data.months[1]"></td>
+                            <td [ngClass]="{'td-check' : data.months[2]}" [innerHTML]="data.months[2]"></td>
+                            <td [ngClass]="{'td-check' : data.months[3]}" [innerHTML]="data.months[3]"></td>
+                            <td [ngClass]="{'td-check' : data.months[4]}" [innerHTML]="data.months[4]"></td>
+                            <td [ngClass]="{'td-check' : data.months[5]}" [innerHTML]="data.months[5]"></td>
+                            <td [ngClass]="{'td-check' : data.months[6]}" [innerHTML]="data.months[6]"></td>
+                            <td [ngClass]="{'td-check' : data.months[7]}" [innerHTML]="data.months[7]"></td>
+                            <td [ngClass]="{'td-check' : data.months[8]}" [innerHTML]="data.months[8]"></td>
+                            <td [ngClass]="{'td-check' : data.months[9]}" [innerHTML]="data.months[9]"></td>
+                            <td [ngClass]="{'td-check' : data.months[10]}" [innerHTML]="data.months[10]"></td>
+                            <td [ngClass]="{'td-check' : data.months[11]}" [innerHTML]="data.months[11]"></td>
                             <td>{{ data.avances }}</td>
                         </tr>
                     </ng-template>
@@ -287,3 +295,107 @@
         </div>
     </div>
 </div>
+<p-dialog
+    header="Vista previa del plan"
+    [(visible)]="floatingBoard"
+    [style]="{ width: '90rem' }"
+    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+    [resizable]="true"
+>
+    <p-table
+        [value]="previewData"
+        styleClass="p-datatable-gridlines"
+        responsiveLayout="scroll"
+    >
+        <ng-template pTemplate="header">
+            <tr>
+                <th>COD. ACT</th>
+                <th>ACTIVIDAD FUNCIONAL</th>
+                <th>COD. TAREA</th>
+                <th>TAREAS</th>
+                <th>Ene.</th>
+                <th>Feb.</th>
+                <th>Mar.</th>
+                <th>Abr.</th>
+                <th>May.</th>
+                <th>Jun.</th>
+                <th>Jul.</th>
+                <th>Ago.</th>
+                <th>Sep.</th>
+                <th>Oct.</th>
+                <th>Nov.</th>
+                <th>Dic.</th>
+                <th>AVANCES</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-data let-rowIndex="rowIndex">
+            <tr>
+                <!-- Mostrar la actividad funcional sólo en la primera fila correspondiente -->
+                <td
+                    *ngIf="shouldShowRowspan(rowIndex)"
+                    [attr.rowspan]="getRowspan(data.codAct)"
+                >
+                    {{ data.codAct }}
+                </td>
+                <td
+                    *ngIf="shouldShowRowspan(rowIndex)"
+                    [attr.rowspan]="getRowspan(data.codAct)"
+                >
+                    {{ data.actividadFuncional }}
+                </td>
+
+                <td>{{ data.taskCode }}</td>
+                <td>{{ data.tarea }}</td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[0] }"
+                    [innerHTML]="data.months[0]"
+                ></td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[1] }"
+                    [innerHTML]="data.months[1]"
+                ></td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[2] }"
+                    [innerHTML]="data.months[2]"
+                ></td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[3] }"
+                    [innerHTML]="data.months[3]"
+                ></td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[4] }"
+                    [innerHTML]="data.months[4]"
+                ></td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[5] }"
+                    [innerHTML]="data.months[5]"
+                ></td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[6] }"
+                    [innerHTML]="data.months[6]"
+                ></td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[7] }"
+                    [innerHTML]="data.months[7]"
+                ></td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[8] }"
+                    [innerHTML]="data.months[8]"
+                ></td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[9] }"
+                    [innerHTML]="data.months[9]"
+                ></td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[10] }"
+                    [innerHTML]="data.months[10]"
+                ></td>
+                <td
+                    [ngClass]="{ 'td-check': data.months[11] }"
+                    [innerHTML]="data.months[11]"
+                ></td>
+                <td>{{ data.avances }}</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</p-dialog>
