--- a/src/app/business/pages/plans-register/plans-register.component.scss
+++ b/src/app/business/pages/plans-register/plans-register.component.scss
@@ -1,4 +1,4 @@
-.p-field {
+  .p-field {
     margin-bottom: 1rem;
   }
   
@@ -25,4 +25,8 @@
   .p-button-sm {
     font-size: 0.85em;
     padding: 0.5rem 1rem;
+  }
+
+  .td-check {
+    background-color: #f9fafb;
   }
