--- a/src/app/business/pages/inscription-tracking/inscription-tracking.component.html
+++ b/src/app/business/pages/inscription-tracking/inscription-tracking.component.html
@@ -274,9 +274,11 @@
                     />
                 </div>
             </div>
-            <div *ngIf="!showEdit" class="card flex justify-content-center col-12">
+            <div
+                *ngIf="!showEdit"
+                class="card flex justify-content-center col-12"
+            >
                 <h5
-                    
                     class="font-bold text-color"
                     style="font-family: revert; text-align: center"
                 >
@@ -285,21 +287,20 @@
             </div>
             <form *ngIf="showEdit" [formGroup]="titleForm">
                 <textarea
-               
-                rows="3"
-                cols="30"
-                pInputTextarea
-                class="w-full font-bold text-color"
-                style="
-                    font-family: revert;
-                    text-align: center;
-                    font-size: 17.5px;
-                "
-                formControlName="title"
-            >
-            </textarea>
+                    rows="3"
+                    cols="30"
+                    pInputTextarea
+                    class="w-full font-bold text-color"
+                    style="
+                        font-family: revert;
+                        text-align: center;
+                        font-size: 17.5px;
+                    "
+                    formControlName="title"
+                >
+                </textarea>
             </form>
-           
+
             <div *ngIf="!showEdit">
                 <div class="grid col-12">
                     <div class="col-12 col-md-3">
@@ -341,9 +342,7 @@
                             }}
                         </p>
                     </div>
-                    <div class="col-3">
-                        
-                    </div>
+                    <div class="col-3"></div>
                     <div class="card col-3" style="max-height: 100px">
                         <p class="font-bold">Estado:</p>
                         <p-tag
